安装常用配置

--- a/config/dev.html
+++ b/config/dev.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <script type="text/javascript" src="bundle.js"></script>
