--- a/config/dev.html
+++ b/config/dev.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <script type="text/javascript" src="bundle.js"></script>
+	<div id="app"></div>
+	<script type="text/javascript" src="dev/js/lib/vendor.dll.js"></script>
+    <script type="text/javascript" src="js/bundle.js"></script>
 </body>
 </html>
