--- a/config/dev.html
+++ b/config/dev.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script type="text/javascript" src="dev/js/lib/vendor.dll.js"></script>
-    <script type="text/javascript" src="js/bundle.js"></script>
+	<script type="text/javascript" src="dev/js/lib/vendor.dll.js?time=@dateTime@"></script>
+    <script type="text/javascript" src="js/@entryName@.bundle.js?time=@dateTime@"></script>
 </body>
 </html>
