支持嵌入代码

--- a/config/dev.html
+++ b/config/dev.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Title</title>
 </head>
 <body>
 	<div id="app"></div>
-	<script type="text/javascript" src="dev/js/lib/vendor.dll.js?time=@dateTime@"></script>
-    <script type="text/javascript" src="js/@entryName@.bundle.js?time=@dateTime@"></script>
 </body>
 </html>
