--- a/config/dest.html
+++ b/config/dest.html
@@ -8,5 +8,8 @@
 </head>
 <body>
 	<div id="app"></div>
+	<script src="@dllJsPath@"></script>
+	<script src="@commonJsPath@"></script>
+	<script src="@indexJsPath@"></script>
 </body>
 </html>
