--- a/config/dest.html
+++ b/config/dest.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="@indexCssPath@">
 </head>
 <body>
 	<div id="app"></div>
